// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarDatePicker by default renders correctly 1`] = `
<label class="vnt-input">
  <!---->
  <input type="date" placeholder="" class="vnt-input__control">
</label>
`;

exports[`CalendarDatePicker can be disabled renders correctly 1`] = `
<label class="vnt-input" disabled="disabled">
  <!---->
  <input type="date" placeholder="" class="vnt-input__control">
</label>
`;
